<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SignInFragment"
    android:background="@color/primary_color"
    android:orientation="vertical">

    <TextView
        android:id="@+id/getStartedLable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:text="Let's Get Started"
        android:textColor="@color/white"
        android:textSize="28dp" />

    <LinearLayout
        android:layout_marginVertical="10dp"
        android:layout_below="@+id/getStartedLable"
        android:id="@+id/phoneNumberContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_marginBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number_label"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="17dp"
            android:layout_marginLeft="20dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            app:hintEnabled="false"
            android:layout_marginHorizontal="20dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            android:id="@+id/phoneNumberInputText"

            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                app:hintEnabled="false"
                android:paddingTop="16dp"
                android:textColor="@color/white"
                android:background="@drawable/inputtextfileoutline"
                >
            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/passwordContainer"
        android:layout_below="@+id/phoneNumberContainer">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/password_label"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="17dp"
            android:layout_marginLeft="20dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            app:hintEnabled="false"
            android:layout_marginHorizontal="20dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/hint_text_color"
            app:endIconMode="password_toggle"
            android:id="@+id/paswordInputText"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:hintEnabled="false"
                android:paddingTop="16dp"
                android:textColor="@color/white"
                android:background="@drawable/inputtextfileoutline"
                android:inputType="textPassword"
                >
            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordContainer"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:padding="10dp"
        android:text="@string/signin_label"
        android:textColor="@color/primary_color"
        android:textSize="17dp">

    </Button>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/shapelayout"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/create_account_label"
            android:textAllCaps="true"
            android:textColor="@color/primary_color"
            android:textSize="14dp">

        </TextView>

        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:id="@+id/signupbtn"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:backgroundTint="@color/white"
            android:text="@string/sign_up_label"
            android:textColor="@color/hint_text_color"></Button>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OR"
            android:textColor="@color/primary_color"
            android:textSize="14dp"></TextView>

        <Button
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:backgroundTint="@color/facebook_color"
            android:text="@string/sign_up_fb_label"
            android:textColor="@color/white"
            app:icon="@drawable/ic_facebook"></Button>

        <Button
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/google_color"
            android:text="@string/sign_up_google_label"
            android:textColor="@color/white"
            app:icon="@drawable/ic_google"></Button>

    </LinearLayout>

</RelativeLayout>