<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.SignupActivity"
    android:background="@color/primary_color"
    android:orientation="vertical">

    <TextView
        android:id="@+id/getStartedLable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:text="@string/create_account_label"
        android:textColor="@color/white"
        android:textSize="28dp" />

    <LinearLayout
        android:id="@+id/phoneNumberContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/getStartedLable"
        android:layout_marginVertical="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="8dp"
            android:text="@string/phone_number_label"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="17dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneNumberInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintEnabled="false"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:background="@drawable/inputtextfileoutline"
                android:textColor="@color/white"
                app:hintEnabled="false"></com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/passwordContainer"
        android:layout_below="@+id/phoneNumberContainer">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/password_label"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="17dp"
            android:layout_marginLeft="20dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            android:layout_marginHorizontal="20dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/hint_text_color"
            app:endIconMode="password_toggle"
            android:id="@+id/paswordInputText"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:hintEnabled="false"
                android:textColor="@color/white"
                android:background="@drawable/inputtextfileoutline"
                android:inputType="textPassword"
                >
            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_marginVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/confirmPasswordContainer"
        android:layout_below="@+id/passwordContainer">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/confirm_password_label"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="17dp"
            android:layout_marginLeft="20dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            android:layout_marginHorizontal="20dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/hint_text_color"
            app:endIconMode="password_toggle"
            android:id="@+id/confirmPaswordInputText"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:hintEnabled="false"
                android:textColor="@color/white"
                android:background="@drawable/inputtextfileoutline"
                android:inputType="textPassword"
                >
            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        app:cornerRadius="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirmPasswordContainer"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:padding="10dp"
        android:text="@string/sign_up_label"
        android:textColor="@color/primary_color"
        android:textSize="17dp">

    </com.google.android.material.button.MaterialButton>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/shapelayout"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/already_has_an_account_label"
            android:textAllCaps="true"
            android:textColor="@color/primary_color"
            android:textSize="14dp">

        </TextView>

        <com.google.android.material.button.MaterialButton
            app:cornerRadius="10dp"
            android:id="@+id/signinbtn"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:backgroundTint="@color/white"
            android:text="@string/signin_label"
            android:textColor="@color/hint_text_color"></com.google.android.material.button.MaterialButton>
    </LinearLayout>

</RelativeLayout>