<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProfileActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/avaProfile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:src="@mipmap/ic_launcher_round"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_below="@+id/avaProfile"
            android:id="@+id/name_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:expandedHintEnabled="false"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            app:boxStrokeColor="@color/primary_color"
            android:hint="@string/address_label_name"
            app:boxCornerRadiusTopStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusBottomEnd="15dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:text="1234"
                android:textColor="@color/black">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_below="@+id/name_input_layout"
            android:id="@+id/phone_number_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:expandedHintEnabled="false"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            app:boxStrokeColor="@color/primary_color"
            android:hint="@string/phone_number_label"
            app:boxCornerRadiusTopStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusBottomEnd="15dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:text="1234"
                android:textColor="@color/black">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_below="@+id/phone_number_input_layout"
            android:id="@+id/address_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:expandedHintEnabled="false"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            app:boxStrokeColor="@color/primary_color"
            android:hint="@string/default_address"
            app:boxCornerRadiusTopStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusBottomEnd="15dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:text="1234"
                android:textColor="@color/black">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_below="@+id/address_input_layout"
            android:id="@+id/new_password_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:expandedHintEnabled="false"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            app:boxStrokeColor="@color/primary_color"
            android:hint="@string/new_password"
            app:boxCornerRadiusTopStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusBottomEnd="15dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:text="1234"
                android:textColor="@color/black">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/new_password_input_layout"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@color/primary_color"
            android:text="Save"
            android:textSize="22dp" />

    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>